RegressionTests/TestSuiteExport/reject/parameter_storage_class.blade
// EXPECT: fail
// DIAGNOSTICS: E0217

fn f(cog x: u32) void {
}